# anacondacode

./: .gitignore  changelog.md  cluegen1.py  pyproject.toml  readme.md
anacondacode/: __init__.py  anacondacode.py
samples/: anacondacode_bank_model_in_salabim.xlsm  anacondacode_bank_model_in_salabim.xlsx  anacondacode_poc.xlsx
tests/: test_anacondacode.py
