[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anacondacode"
authors = [
    {name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com"}
]
description = "anacondacode"
version = "0.0.1-0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
[project.urls]
Homepage = "https://github.com/salabim/anacondacode"
Repository = "https://github.com/salabim/anacondacode"

[tool.setuptools]
packages = ["anacondacode"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

